--- a/judge/templates/problems.html
+++ b/judge/templates/problems.html
@@ -11,11 +11,11 @@
   <div class="problem-card-title">💠 {{ p.name }}</div>
   <div class="problem-card-meta">Code: <code style="background:#0c295a;padding:2px 4px;border-radius:4px;">{{ p.code }}</code></div>
   <div class="d-flex justify-content-between align-items-center">
-    <span class="difficulty-badge
-      {% if p.difficulty == "E" %} badge-easy
-      {% elif p.difficulty == "M" %} badge-medium
-      {% else %} badge-hard
-      {% endif %}">
+    <span class="badge
+      {% if p.difficulty == 'Easy' %}bg-success text-light
+      {% elif p.difficulty == 'Medium' %}bg-warning text-dark
+      {% elif p.difficulty == 'Hard' %}bg-danger text-light
+      {% else %}bg-secondary text-light{% endif %}">
       {{ p.get_difficulty_display }}
     </span>
     <a href="{% url 'problem_detail' code=p.code %}" class="btn-solve">
