--- a/judge/templates/base.html
+++ b/judge/templates/base.html
@@ -365,6 +365,7 @@
   });
 </script>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-..." crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script>
   // Auto-close Bootstrap alerts after 3 seconds
